--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,26 @@
+html {
+  @media screen and (min-width: 1920px) {
+    font-size: 16px;
+  }
+  @media screen and (min-width: 1441px) and (max-width: 1919px) {
+    font-size: 14px;
+  }
+  @media screen and (min-width: 1200px) and (max-width: 1440px) {
+    font-size: 14px;
+  }
+}
+
+body {
+  font-family: SourceHanSansCN-Normal, SourceHanSansCN !important;
+  font-size: 14px;
+  color: #fff;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
+}
+
 /*清除浮动*/
 .clearfix:after {
   display: block;
