封装可拖动Modal组件，借助dragm第三方库

--- a/src/components/CzNav/CzNav.less
+++ b/src/components/CzNav/CzNav.less
@@ -1,4 +1,4 @@
-
+@import "../../assets/less/contants";
 .cz-CzNav {
   width: 100%;
   height: 100%;
@@ -6,14 +6,27 @@
 
   > .collapseBtn {
     position: absolute;
+    height: 55px;
     width: 12px;
-    height: 20px;
-    background-color: pink;
     top: 50%;
     transform: translateY(-50%);
     right: -13px;
     cursor: pointer;
     z-index: 999;
     text-align: center;
+
+    border-right: 0 solid transparent;
+    border-left: 8px solid #1da57a;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    > .collapse_icon {
+      margin-left: -14px;
+      font-size: 14px;
+      color: #fff;
+    }
   }
 }
