二次封装Table组件，实现自适应以及表格拖动列头改变列宽功能

--- a/src/index.less
+++ b/src/index.less
@@ -14,6 +14,8 @@ body {
   font-family: SourceHanSansCN-Normal, SourceHanSansCN !important;
   font-size: 14px;
   color: #fff;
+  margin: 0;
+  padding: 0;
 }
 
 #root {
