--- a/src/components/CzNav/CzNav.less
+++ b/src/components/CzNav/CzNav.less
@@ -1,32 +1,7 @@
 @import "../../assets/less/contants";
+
 .cz-CzNav {
   width: 100%;
   height: 100%;
-  position: relative;
-
-  > .collapseBtn {
-    position: absolute;
-    height: 55px;
-    width: 12px;
-    top: 50%;
-    transform: translateY(-50%);
-    right: -13px;
-    cursor: pointer;
-    z-index: 999;
-    text-align: center;
-
-    border-right: 0 solid transparent;
-    border-left: 8px solid #1da57a;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    > .collapse_icon {
-      margin-left: -14px;
-      font-size: 14px;
-      color: #fff;
-    }
-  }
+  background-color: #000;
 }
