--- a/src/components/CzContainer/CzContainer.less
+++ b/src/components/CzContainer/CzContainer.less
@@ -4,11 +4,10 @@
   width: 100vw;
   height: 100vh;
   background-color: @bgColor;
-  display: flex;
-  flex-direction: column;
 
   > .cz-body-wrapper {
-    flex: 1;
+    width: 100%;
+    height: 100 - (7000vh / @UIHeight);
 
     > .cz-leftNavWrapper {
       width: 15%;
