--- a/src/pages/Login/Login.less
+++ b/src/pages/Login/Login.less
@@ -1,12 +1,19 @@
 @import "../../assets/less/contants";
 
 .cz-czLogin {
-  > .title {
-    .width(200);
-    .height(200);
-    .lineHeight(200);
-    font-size: 1rem;
-    background-color: pink;
-    text-align: center;
+  width: 100%;
+  height: 100%;
+  background: url("../../assets/images/loginBg.jpg") no-repeat;
+  background-size: 100% 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  > .loginWrapper {
+    background-color: #fff;
+    .width(400);
+    .height(600);
+    box-shadow: 0 1px 2px -2px rgba(0, 0, 0, .16);
+    border-radius: 7px;
   }
 }
