增加rem计算函数

--- a/src/assets/less/contants.less
+++ b/src/assets/less/contants.less
@@ -17,6 +17,11 @@
   line-height: @height / @UIHeight * 100vh;
 }
 
+//获取字体大小函数
+.fontSize(@fontSize) {
+  font-size: @fontSize/16 * 1rem;
+}
+
 @textColor: #6E7986;
 @titleColor: #3D454E;
 @textColorSelected: #49B0FF;
